# solitaire

./: CMakeLists.txt  compile_commands.json
include/: cards.hpp  game.hpp  gametouch.hpp  solitaire.hpp
src/: cards.cpp  game.cpp  gametouch.cpp  main.cpp  solitaire.cpp
